@@ -75,7 +75,8 @@ Core - General
   - Now use HTTPS for the latest version check
   - Adds the public_cache_url config entry,  and make sure that the css_url uses that by default.
   - Adds many core hooks
-  - Enhance the page_image tag to optionally output a full HTML img tag if there is a value for the respective property.
+  - Enhance the {page_image} plugin to optionally output a full HTML img tag if there is a value for the respective property.
+  - Improve the {content_image} plugin to output nothing if there is no value for the property, and to output any non-internal arguments as attributes to the HTML img tag.
 
   - #11080 - Parameter $adding in GetContentBlockFieldInput always FALSE.
   - #11093 - Bad error message in jquery.cmsms_autorefresh.js.
